--- a/react-compent/package.json
+++ b/react-compent/package.json
@@ -56,6 +56,8 @@
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "redux-devtools": "^3.5.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
