--- a/react-compent/package.json
+++ b/react-compent/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "@craco/craco": "^5.6.4",
     "@svgr/webpack": "4.3.3",
