--- a/webpack/duo-ye-mian/package.json
+++ b/webpack/duo-ye-mian/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^3.6.0",
     "cssnano": "^4.1.10",
     "file-loader": "^6.0.0",
+    "glob": "^7.1.6",
     "html-webpack-plugin": "^4.3.0",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
