--- a/react-project/imoc-com/package.json
+++ b/react-project/imoc-com/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.10.5",
     "@craco/craco": "^5.6.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
