--- a/react-project/imoc-com/package.json
+++ b/react-project/imoc-com/package.json
@@ -12,6 +12,9 @@
     "antd": "^4.4.3",
     "classnames": "^2.2.6",
     "craco-less": "^1.17.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.25",
+    "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
