--- a/vue/package.json
+++ b/vue/package.json
@@ -12,6 +12,7 @@
     "element-ui": "^2.13.2",
     "es6-promise": "^4.2.8",
     "less-loader": "^6.2.0",
+    "moment": "^2.27.0",
     "vue": "^2.6.11",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1"
