--- a/vue/package.json
+++ b/vue/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.6.5",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.2",
     "es6-promise": "^4.2.8",
