--- a/vue/package.json
+++ b/vue/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.6.5",
+    "axios": "^0.21.1",
+    "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.2",
     "es6-promise": "^4.2.8",
